--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ dist: bionic
 language: bash
 sudo: required
 
-before_install:
-  - curl https://raw.githubusercontent.com/express42/otus-platform-tests/2019-12/run.sh | bash
+#before_install:
+#  - curl https://raw.githubusercontent.com/express42/otus-platform-tests/2019-12/run.sh | bash
