--- a/kubernetes-controllers/frontend-deployment.yaml
+++ b/kubernetes-controllers/frontend-deployment.yaml
@@ -15,9 +15,9 @@ spec:
         app: frontend
     spec:
       containers:
-      - name: server
-        image: olegim89/hipster-frontend:v.0.0.2
-        readinessProbe:
+        - name: server
+          image: olegim89/hipster-frontend:v.0.0.2
+          readinessProbe:
             initialDelaySeconds: 10
             httpGet:
               path: "/_healthz"
@@ -25,18 +25,18 @@ spec:
               httpHeaders:
               - name: "Cookie"
                 value: "shop_session-id=x-readiness-probe"
-        env:
+          env:
           - name: PRODUCT_CATALOG_SERVICE_ADDR
-            value: "localhost:2000"
+            value: "productcatalogservice:3550"
           - name: CURRENCY_SERVICE_ADDR
-            value: "localhost:2001"
+            value: "currencyservice:7000"
           - name: CART_SERVICE_ADDR
-            value: "localhost:2002"
+            value: "cartservice:7070"
           - name: RECOMMENDATION_SERVICE_ADDR
-            value: "localhost:2003"
-          - name: CHECKOUT_SERVICE_ADDR
-            value: "localhost:2004"
+            value: "recommendationservice:8080"
           - name: SHIPPING_SERVICE_ADDR
-            value: "localhost:2005"
+            value: "shippingservice:50051"
+          - name: CHECKOUT_SERVICE_ADDR
+            value: "checkoutservice:5050"
           - name: AD_SERVICE_ADDR
-            value: "localhost:2006"
+            value: "adservice:9555"
