--- a/kubernetes-security/task02/03-rules.yaml
+++ b/kubernetes-security/task02/03-rules.yaml
@@ -1,37 +1,25 @@
-# apiVersion: rbac.authorization.k8s.io/v1
-# kind: ClusterRole
-# metadata:
-#   name: pod-reader
-# rules:
-#   - apiGroups:
-#       - ""
-#     resources:
-#       - pods
-#     verbs:
-#       - get
-#       - list
-#       - watch
-
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: pod-reader
-  rules:
-   - apiGroup: [""] # "" означает apiGroup под именем core или legacy
-     resources: ["pods"]
-     verbs: ["get", "watch", "list"]
-
-#
-
+rules:
+- apiGroups: 
+  - ""
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: pod-reader-binding
-roleRef:
-  name: pod-reader
-  kind: ClusterRole
-  apiGroup: rbac.authorization.k8s.io
 subjects:
-  - kind: Group
-    name: system:serviceaccounts:prometheus
-    namespace: prometheus
+- kind: Group
+  name: system:serviceaccounts:prometheus
+roleRef:
+  kind: ClusterRole
+  name: pod-reader
+  apiGroup: rbac.authorization.k8s.io
