--- a/kubernetes-security/task03/03-jane-admin.yaml
+++ b/kubernetes-security/task03/03-jane-admin.yaml
@@ -1,24 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  namespace: dev
-  name: jane
-  rules:
-   - apiGroup: [""] # "" означает apiGroup под именем core или legacy
-     resources: ["pods"]
-     verbs: [""]
-
-apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: jane-admin
+  name: jane_admin
   namespace: dev
-subjects:
-  - kind: ServiceAccount
-    name: jane
-    namespace: dev
 roleRef:
-    kind: Role # явно указываем Role или ClusterRole
-    name: jane # а тут имя той Role или ClusterRole к которой мы биндимся
-    apiGroup: rbac.authorization.k8s.io
-   
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: admin
+subjects:
+- kind: ServiceAccount
+  name: jane
