--- a/kubernetes-security/task03/05-ken-view.yaml
+++ b/kubernetes-security/task03/05-ken-view.yaml
@@ -1,23 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  namespace: dev
-  name: ken
-  rules:
-   - apiGroup: [""] # "" означает apiGroup под именем core или legacy
-     resources: ["pods"]
-     verbs: ["get", "watch", "list"]
-
-apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: ken-view
+  name: ken_view
   namespace: dev
-subjects:
-  - kind: ServiceAccount
-    name: ken
-    namespace: dev
 roleRef:
-    kind: Role # явно указываем Role или ClusterRole
-    name: ken # а тут имя той Role или ClusterRole к которой мы биндимся
-    apiGroup: rbac.authorization.k8s.io
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: view
+subjects:
+- kind: ServiceAccount
+  name: ken
