--- a/kubernetes-intro/web-pod.yaml
+++ b/kubernetes-intro/web-pod.yaml
@@ -15,6 +15,10 @@ spec:
     containers:
          - name: web
            image: olegim89/otus_intro:latest
+           readinessProbe:
+              httpGet:
+                path: /index.html
+                port: 80
            volumeMounts:
            - name: app
              mountPath: /app
