--- a/kubernetes-networks/web-deploy.yaml
+++ b/kubernetes-networks/web-deploy.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -8,31 +7,36 @@ spec:
   selector:
     matchLabels:
       app: web
+  strategy:
+      type: RollingUpdate
+      rollingUpdate:
+         maxUnavailable: 0
+         maxSurge: 100%
   template:
     metadata:
-      labels:
-        app: web
+     labels: 
+       app: web
     spec:
       containers:
-      - name: web
-        image: avtandilko/web:1.0
-        livenessProbe:
-          tcpSocket:
-            port: 8000
-        readinessProbe:
-          httpGet:
-            path: /index.html
-            port: 8000
-        volumeMounts:
-          - name: app
-            mountPath: /app
+        - name: web
+          image: olegim89/otus_intro:latest
+          livenessProbe:
+            tcpSocket: 
+              port: 8000
+          readinessProbe:
+            httpGet:
+              path: /index.html
+              port: 8000
+          volumeMounts:
+            - name: app
+              mountPath: /app
       initContainers:
-        - name: html-gen
-          image: busybox:musl
-          command: ['sh', '-c', 'wget -O- https://bit.ly/otus-k8s-index-gen | sh']
+        - name: init-myservice
+          image: busybox:1.31.0
+          command: ['sh', '-c', 'wget -O- https://raw.githubusercontent.com/express42/otus-platform-snippets/master/Module-02/Introduction-to-Kubernetes/wget.sh | sh']
           volumeMounts:
             - name: app
               mountPath: /app
       volumes:
-        - name: app
-          emptyDir: {}
+         - name: app
+           emptyDir: {}
