--- a/kubernetes-volumes/minio-secret.yaml
+++ b/kubernetes-volumes/minio-secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: secretword
 type: Opaque
 data:
-  username: c2VjcmV0X2FkbWluCg==
-  password: cGFzc3dvcmQxMjM0NTYK
+  username: YWRtaW4K
+  password: cGFzc3dvcmQK
   
