--- a/kubernetes-volumes/minio-secret.yaml
+++ b/kubernetes-volumes/minio-secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secretword
+  name: secret
 type: Opaque
 data:
-  username: YWRtaW4K
-  password: cGFzc3dvcmQK
+  secret_name: YWRtaW5pc3RyYXRvcgo=
+  secret_pass: ZGVycGFyb2wK
   
