--- a/kubernetes-controllers/paymentservice-deployment-bg.yaml
+++ b/kubernetes-controllers/paymentservice-deployment-bg.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: paymentservice
+  name: paymentservice-bg
   labels:
-    app: paymentservice
+    app: paymentservice-bg
 spec:
   replicas: 3
   strategy:
@@ -13,27 +13,12 @@ spec:
       maxUnavailable: 0
   selector:
     matchLabels:
-      app: paymentservice
+      app: paymentservice-bg
   template:
     metadata:
       labels:
-        app: paymentservice
+        app: paymentservice-bg
     spec:
       containers:
-        - name: server
-          image: olegim89/hipster-paymentservice:v0.0.2
-          env:
-          - name: PRODUCT_CATALOG_SERVICE_ADDR
-            value: "productcatalogservice:3550"
-          - name: CURRENCY_SERVICE_ADDR
-            value: "currencyservice:7000"
-          - name: CART_SERVICE_ADDR
-            value: "cartservice:7070"
-          - name: RECOMMENDATION_SERVICE_ADDR
-            value: "recommendationservice:8080"
-          - name: SHIPPING_SERVICE_ADDR
-            value: "shippingservice:50051"
-          - name: CHECKOUT_SERVICE_ADDR
-            value: "checkoutservice:5050"
-          - name: AD_SERVICE_ADDR
-            value: "adservice:9555"
+      - name: server
+        image: olegim89/hipster-paymentservice:v0.0.2
