--- a/kubernetes-controllers/frontend-deployment.yaml
+++ b/kubernetes-controllers/frontend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: server
-        image: olegim89/hipster-frontend:v.0.0.2
+        image: olegim89/hipster-frontend:v.0.0.1
         readinessProbe:
             initialDelaySeconds: 10
             httpGet:
@@ -26,17 +26,17 @@ spec:
               - name: "Cookie"
                 value: "shop_session-id=x-readiness-probe"
         env:
-          - name: PRODUCT_CATALOG_SERVICE_ADDR
-            value: "localhost:2000"
-          - name: CURRENCY_SERVICE_ADDR
-            value: "localhost:2001"
-          - name: CART_SERVICE_ADDR
-            value: "localhost:2002"
-          - name: RECOMMENDATION_SERVICE_ADDR
-            value: "localhost:2003"
-          - name: CHECKOUT_SERVICE_ADDR
-            value: "localhost:2004"
-          - name: SHIPPING_SERVICE_ADDR
-            value: "localhost:2005"
-          - name: AD_SERVICE_ADDR
-            value: "localhost:2006"
+        - name: PRODUCT_CATALOG_SERVICE_ADDR
+          value: "productcatalogservice:3550"
+        - name: CURRENCY_SERVICE_ADDR
+          value: "currencyservice:7000"
+        - name: CART_SERVICE_ADDR
+          value: "cartservice:7070"
+        - name: RECOMMENDATION_SERVICE_ADDR
+          value: "recommendationservice:8080"
+        - name: SHIPPING_SERVICE_ADDR
+          value: "shippingservice:50051"
+        - name: CHECKOUT_SERVICE_ADDR
+          value: "checkoutservice:5050"
+        - name: AD_SERVICE_ADDR
+          value: "adservice:9555"
