--- a/kubernetes-volumes/minio-secret.yaml
+++ b/kubernetes-volumes/minio-secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: secret
 type: Opaque
 data:
-  secret_name: YWRtaW5pc3RyYXRvcg==
-  secret_pass: ZGVycGFyb2w=
+  username: YWRtaW5pc3RyYXRvcg==
+  password: ZGVycGFyb2w=
   
