--- a/kubernetes-volumes/minio-secret.yaml
+++ b/kubernetes-volumes/minio-secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secret
+  name: mysecret
 type: Opaque
 data:
-  username: YWRtaW5pc3RyYXRvcg==
-  password: ZGVycGFyb2w=
+  username: bWluaW8=
+  password: bWluaW8xMjM=
   
