--- a/kubernetes-volumes/minio-statefulset.yaml
+++ b/kubernetes-volumes/minio-statefulset.yaml
@@ -17,16 +17,16 @@ spec:
       containers:
       - name: minio
         env:
-        - name: MINIO_ACCESS_KEY
+        - name: SECRET_USERNAME
           valueFrom:
-              secretKeyRef:
-                name: secret
-                key: username
-        - name: MINIO_SECRET_KEY
+            secretKeyRef:
+              name: mysecret
+              key: username
+        - name: SECRET_PASSWORD
           valueFrom:
-              secretKeyRef:
-                name: secret
-                key: password
+            secretKeyRef:
+              name: mysecret
+              key: password
         image: minio/minio:RELEASE.2019-07-10T00-34-56Z
         args:
         - server
