--- a/kubernetes-volumes/minio-secret.yaml
+++ b/kubernetes-volumes/minio-secret.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
+data:
+  MINIO_ACCESS_KEY: bWluaW8=
+  MINIO_SECRET_KEY: bWluaW8xMjM=
 kind: Secret
 metadata:
   name: mysecret
-data:
-  username: bWluaW8=
-  password: bWluaW8xMjM=
-  
