--- a/kubernetes-storage/cluster/cluster.yaml
+++ b/kubernetes-storage/cluster/cluster.yaml
@@ -1,6 +1,25 @@
 kind: Cluster
 apiVersion: kind.sigs.k8s.io/v1alpha3
-nodes:
-- role: control-plane
-- role: worker
-- role: worker
+kubeadmConfigPatches:
+- |
+  apiVersion: kubeadm.k8s.io/v1beta2
+  kind: ClusterConfiguration
+  metadata:
+    name: config
+  apiServer:
+    extraArgs:
+      "feature-gates": "VolumeSnapshotDataSource=true"
+  scheduler:
+    extraArgs:
+      "feature-gates": "VolumeSnapshotDataSource=true"
+  controllerManager:
+    extraArgs:
+      "feature-gates": "VolumeSnapshotDataSource=true"
+- |
+  apiVersion: kubeadm.k8s.io/v1beta2
+  kind: InitConfiguration
+  metadata:
+    name: config
+  nodeRegistration:
+    kubeletExtraArgs:
+      "feature-gates": "VolumeSnapshotDataSource=true"
