--- a/kubernetes-vault/tls/tls.cnf
+++ b/kubernetes-vault/tls/tls.cnf
@@ -1,23 +1,26 @@
 [ req ]
 default_bits = 2048
-default_md = sha256
 prompt = no
-encrypt_key = no
+default_md = sha256
 distinguished_name = dn
-req_extensions = req_ext
+req_extensions = v3_ext
 [ dn ]
-CN = vault
-C = US
-OU = Service
-emailAddress = "yourmail@mail.com"
-[ req_ext ]
+commonName = localhost
+stateOrProvinceName = SPB
+countryName = RU
+emailAddress = info@nks.com
+organizationName = NoORG
+organizationalUnitName = IT
+[ v3_ext ]
 basicConstraints = CA:FALSE
-keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+keyUsage = keyEncipherment,dataEncipherment
 extendedKeyUsage = serverAuth
 subjectAltName = @alt_names
-[alt_names]
-DNS.1 = localhost
-DNS.2 = vault.default
-DNS.3 = vault.default.svc
-DNS.4 = vault.default.svc.cluster.local
+[ alt_names ]
+DNS.1 = vault
+DNS.2 = localhost
+DNS.3 = vault-server-tls
+DNS.4 = vault-server-tls.default
+DNS.5 = vault-server-tls.default.svc
+DNS.6 = vault-server-tls.default.svc.cluster.local
 IP.1 = 127.0.0.1
