--- a/kubernetes-vault/nginx/nginx-deployment.yaml
+++ b/kubernetes-vault/nginx/nginx-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nginx-tls
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: nginx-tls
@@ -18,14 +18,14 @@ spec:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/agent-inject-status: "update"
         vault.hashicorp.com/role: "otus"
-        vault.hashicorp.com/agent-inject-secret-server.cert: "pki_int/issue/example-dot-com"
+        vault.hashicorp.com/agent-inject-secret-server.cert: "pki_int/issue/example-dot-ru"
         vault.hashicorp.com/agent-inject-template-server.cert: |
-          {{- with secret "pki_int/issue/example-dot-com" "common_name=test.example.com" "ttl=5m" -}}
+          {{- with secret "pki_int/issue/example-dot-ru" "common_name=test.example.ru" "ttl=1m" -}}
           {{ .Data.certificate }}
           {{- end }}
-        vault.hashicorp.com/agent-inject-secret-server.key: "pki_int/issue/example-dot-com"
+        vault.hashicorp.com/agent-inject-secret-server.key: "pki_int/issue/example-dot-ru"
         vault.hashicorp.com/agent-inject-template-server.key: |
-          {{- with secret "pki_int/issue/example-dot-com" "common_name=test.example.com" "ttl=5m" -}}
+          {{- with secret "pki_int/issue/example-dot-ru" "common_name=test.example.ru" "ttl=1m" -}}
           {{ .Data.private_key }}
           {{- end }}
         vault.hashicorp.com/tls-skip-verify: "true"
